--- a/frontend_sort_photo/CMakeLists.txt
+++ b/frontend_sort_photo/CMakeLists.txt
@@ -23,6 +23,8 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(frontend_sort_photo
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        sortingwidget.h
+        sortingwidget.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET frontend_sort_photo APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
