--- a/Sort your photos.vcxproj
+++ b/Sort your photos.vcxproj
@@ -121,7 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\johnworker\Desktop\Проекты C++\Sort your photos\libs\exiv2-0.28.3-2019msvc64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\johnworker\Desktop\Проекты C++\Sort your photos\libs\openssl-3.4.0\x64\include;C:\Users\johnworker\Desktop\Проекты C++\Sort your photos\libs\exiv2-0.28.3-2019msvc64\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
       <EnableEnhancedInstructionSet>AdvancedVectorExtensions512</EnableEnhancedInstructionSet>
@@ -131,8 +131,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\johnworker\Desktop\Проекты C++\Sort your photos\libs\exiv2-0.28.3-2019msvc64\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>exiv2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\johnworker\Desktop\Проекты C++\Sort your photos\libs\openssl-3.4.0\x64\lib;C:\Users\johnworker\Desktop\Проекты C++\Sort your photos\libs\exiv2-0.28.3-2019msvc64\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>exiv2.lib;libssl.lib;libcrypto.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
